--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
   auto_size_text: ^2.1.0
   wave: ^0.1.0
   eva_icons_flutter: ^2.0.1
+  custom_navigation_bar: ^0.3.2
   animate_do: ^1.7.3
-
+  velocity_x: ^0.4.1
+  google_fonts: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -63,12 +65,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Raleway
+      fonts:
+        - asset: assets/fonts/Raleway-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
