--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   eva_icons_flutter: ^2.0.1
   custom_navigation_bar: ^0.3.2
   animate_do: ^1.7.3
-  velocity_x: ^0.4.1
   google_fonts: ^1.1.0
+  url_launcher: ^5.7.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
