--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   animate_do: ^1.7.3
   google_fonts: ^1.1.0
   url_launcher: ^5.7.2
+  cached_network_image: ^2.3.2+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
